--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
+python-dotenv
+streamlit
+langchain
+langchain-core
+langchain-community
+langchain-groq
+langchain-openai
+langchain-google-genai
+langchain-ollama
+pypdf
+sentence-transformers
+langchain-huggingface
+chromadb
+numpy
+pydantic
 streamlit>=1.28.0
 easyocr>=1.7.0
 pillow>=9.5.0
