--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,14 @@
-python-dotenv
-streamlit
-langchain
-langchain-core
-langchain-community
-langchain-groq
-langchain-openai
-langchain-google-genai
-langchain-ollama
-pypdf
-sentence-transformers
-langchain-huggingface
-chromadb
-numpy
-pydantic
 streamlit>=1.28.0
-easyocr>=1.7.0
-pillow>=9.5.0
-numpy>=1.24.0
-opencv-python>=4.8.0
 python-dotenv>=1.0.0
 langchain>=0.1.0
+langchain-core>=0.1.0
+langchain-community>=0.0.19
 langchain-groq>=0.1.0
+langchain-google-genai>=1.0.0
+langchain-ollama>=0.1.0
+langchain-openai>=0.1.0
+pypdf>=4.0.0
+chromadb>=0.4.0
+sentence-transformers>=2.2.0
+faiss-cpu>=1.7.0
 pydantic>=2.0.0
