--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ langchain-google-genai>=1.0.0
 langchain-ollama>=0.1.0
 langchain-openai>=0.1.0
 pypdf>=4.0.0
-chromadb>=0.4.0
 sentence-transformers>=2.2.0
 faiss-cpu>=1.7.0
 pydantic>=2.0.0
+protobuf==3.20.1
+chromadb==0.5.5
