--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
-streamlit>=1.28.0
-python-dotenv>=1.0.0
-langchain>=0.1.0
-langchain-core>=0.1.0
-langchain-community>=0.0.19
+streamlit>=1.32.0
+python-dotenv
+langchain>=0.2.0
+langchain-community>=0.2.0
+langchain-core>=0.2.0
 langchain-groq>=0.1.0
-langchain-google-genai>=1.0.0
-langchain-ollama>=0.1.0
-langchain-openai>=0.1.0
-pypdf>=4.0.0
-sentence-transformers>=2.2.0
-faiss-cpu>=1.7.0
-pydantic>=2.0.0
-protobuf==3.20.1
 chromadb==0.5.5
+protobuf==3.20.1
+huggingface-hub
+sentence-transformers
+PyPDF2
+packaging
