--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit>=1.32.0
+streamlit
+pypdf
 python-dotenv
-langchain>=0.2.0
-langchain-community>=0.2.0
-langchain-core>=0.2.0
-langchain-groq>=0.1.0
+langchain
+langchain-community
+langchain-core
+langchain-groq
 chromadb==0.5.5
 protobuf==3.20.1
 huggingface-hub
